akd/crates/macros/tests/compile_panics/migration.stderr
error: proc macro panicked
 --> tests/compile_panics/migration.rs:4:35
  |
4 | ...: Migration = migration!("tests/test_panic_migrations/20250930_03_really_long_name_that_exceeds_the_50_character_limit");
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Migration name '20250930_03_really_long_name_that_exceeds_the_50_character_limit' exceeds 50 characters (length: 64)

error: proc macro panicked
 --> tests/compile_panics/migration.rs:5:36
  |
5 | const NO_UP_MIGRATION: Migration = migration!("tests/test_panic_migrations/20250930_04_no_up");
  |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Required file 'up.sql' not found in migration directory: $DIR/tests/test_panic_migrations/20250930_04_no_up
